CreateAccountPage.qml was added and LabeledTextEdit.qml was created

--- a/assets.qrc
+++ b/assets.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/images">
         <file>assets/scratch.png</file>
         <file>assets/emblem.png</file>
+        <file>assets/icons/519791-101_Warning-512.png</file>
     </qresource>
 </RCC>
