--- a/qml.qrc
+++ b/qml.qrc
@@ -18,5 +18,7 @@
         <file>Components/PopupActivationButton.qml</file>
         <file>Pages/CreateAccountNextPage.qml</file>
         <file>Components/LocationComboBox.qml</file>
+        <file>Pages/LogInPage.qml</file>
+        <file>Pages/ResetPasswordPage.qml</file>
     </qresource>
 </RCC>
