NeedHelpPage.qml, OrganizationHelpPage.qml, SelfOrganizePage.qml were created (popup must be finished)

--- a/assets.qrc
+++ b/assets.qrc
@@ -20,5 +20,8 @@
         <file>assets/icons/Humans-11-11-512.png</file>
         <file>assets/icons/rightArrow.png</file>
         <file>assets/icons/start.png</file>
+        <file>assets/icons/fly.png</file>
+        <file>assets/icons/check_mark.svg</file>
+        <file>assets/icons/reserve.png</file>
     </qresource>
 </RCC>
