--- a/qml.qrc
+++ b/qml.qrc
@@ -36,5 +36,6 @@
         <file>Pages/SelfOrganizePage.qml</file>
         <file>Pages/TravelAgentHelpPage.qml</file>
         <file>Components/TravelAgentItem.qml</file>
+        <file>Pages/AddNotePage.qml</file>
     </qresource>
 </RCC>
