CountryInformationPage.qml was creted, but need connection to model

--- a/assets.qrc
+++ b/assets.qrc
@@ -38,4 +38,5 @@
         <file>assets/icons/backButton.png</file>
         <file>assets/white icons/increaseArrows.png</file>
     </qresource>
+    <qresource prefix="/"/>
 </RCC>
