TripItem.qml was fixed

--- a/assets.qrc
+++ b/assets.qrc
@@ -43,5 +43,6 @@
         <file>assets/icons/photo.png</file>
         <file>assets/icons/front.png</file>
         <file>assets/icons/visitedCities.png</file>
+        <file>assets/icons/idea5.png</file>
     </qresource>
 </RCC>
