InWaitingTripPage.qml was added

--- a/qml.qrc
+++ b/qml.qrc
@@ -57,5 +57,6 @@
         <file>Components/VisitedCountryItem.qml</file>
         <file>Pages/PlansPage.qml</file>
         <file>Components/PlanItem.qml</file>
+        <file>Pages/InWaitingTripPage.qml</file>
     </qresource>
 </RCC>
