UsersData.json was transfered to resources

--- a/assets.qrc
+++ b/assets.qrc
@@ -66,4 +66,7 @@
         <file>assets/icons/Flags/Czech.png</file>
     </qresource>
     <qresource prefix="/"/>
+    <qresource prefix="/db">
+        <file>assets/UsersData.json</file>
+    </qresource>
 </RCC>
