Processes related with active and waiting trips ware fixed, gallery was fixed

--- a/assets.qrc
+++ b/assets.qrc
@@ -103,6 +103,126 @@
         <file>assets/icons/Flags/Turkey.png</file>
         <file>assets/icons/Flags/Vatican.png</file>
         <file>assets/icons/Flags/China.png</file>
+        <file>assets/icons/Flags/Algeria.png</file>
+        <file>assets/icons/Flags/Angola.png</file>
+        <file>assets/icons/Flags/Armenia.png</file>
+        <file>assets/icons/Flags/Australia.png</file>
+        <file>assets/icons/Flags/Azerbaijan.png</file>
+        <file>assets/icons/Flags/Bahrain.png</file>
+        <file>assets/icons/Flags/Bangladesh.png</file>
+        <file>assets/icons/Flags/Belize.png</file>
+        <file>assets/icons/Flags/Benin.png</file>
+        <file>assets/icons/Flags/Bhutan.png</file>
+        <file>assets/icons/Flags/Bolivia.png</file>
+        <file>assets/icons/Flags/Botswana.png</file>
+        <file>assets/icons/Flags/Brunei.png</file>
+        <file>assets/icons/Flags/Burkina Faso.png</file>
+        <file>assets/icons/Flags/Burundi.png</file>
+        <file>assets/icons/Flags/Cambodia.png</file>
+        <file>assets/icons/Flags/Cameroon.png</file>
+        <file>assets/icons/Flags/Canada.png</file>
+        <file>assets/icons/Flags/Cape Verde.png</file>
+        <file>assets/icons/Flags/Central African Republic.png</file>
+        <file>assets/icons/Flags/Chad.png</file>
+        <file>assets/icons/Flags/Colombia.png</file>
+        <file>assets/icons/Flags/Comoros.png</file>
+        <file>assets/icons/Flags/Congo Democratic Republic.png</file>
+        <file>assets/icons/Flags/Congo Republic.png</file>
+        <file>assets/icons/Flags/Cote d'ivoire.png</file>
+        <file>assets/icons/Flags/Djibouti.png</file>
+        <file>assets/icons/Flags/East Timor.png</file>
+        <file>assets/icons/Flags/Egypt.png</file>
+        <file>assets/icons/Flags/El Salvador.png</file>
+        <file>assets/icons/Flags/Equatorial Guinea.png</file>
+        <file>assets/icons/Flags/Eritrea.png</file>
+        <file>assets/icons/Flags/Fiji.png</file>
+        <file>assets/icons/Flags/Gabon.png</file>
+        <file>assets/icons/Flags/Gambia.png</file>
+        <file>assets/icons/Flags/Ghana.png</file>
+        <file>assets/icons/Flags/Guinea.png</file>
+        <file>assets/icons/Flags/Guinea Bissau.png</file>
+        <file>assets/icons/Flags/Guyana.png</file>
+        <file>assets/icons/Flags/Honduras.png</file>
+        <file>assets/icons/Flags/India.png</file>
+        <file>assets/icons/Flags/Indonesia.png</file>
+        <file>assets/icons/Flags/Iran.png</file>
+        <file>assets/icons/Flags/Iraq.png</file>
+        <file>assets/icons/Flags/Israel.png</file>
+        <file>assets/icons/Flags/Japan.png</file>
+        <file>assets/icons/Flags/Jordan.png</file>
+        <file>assets/icons/Flags/Kazakhstan.png</file>
+        <file>assets/icons/Flags/Kenya.png</file>
+        <file>assets/icons/Flags/Kiribati.png</file>
+        <file>assets/icons/Flags/Korea, North.png</file>
+        <file>assets/icons/Flags/Korea, South.png</file>
+        <file>assets/icons/Flags/Kuwait.png</file>
+        <file>assets/icons/Flags/Kyrgyzstan.png</file>
+        <file>assets/icons/Flags/Laos.png</file>
+        <file>assets/icons/Flags/Lebanon.png</file>
+        <file>assets/icons/Flags/Lesotho.png</file>
+        <file>assets/icons/Flags/Liberia.png</file>
+        <file>assets/icons/Flags/Libya.png</file>
+        <file>assets/icons/Flags/Malawi.png</file>
+        <file>assets/icons/Flags/Malaysia.png</file>
+        <file>assets/icons/Flags/Maldives.png</file>
+        <file>assets/icons/Flags/Mali.png</file>
+        <file>assets/icons/Flags/Marshall Islands.png</file>
+        <file>assets/icons/Flags/Mauritania.png</file>
+        <file>assets/icons/Flags/Mauritius.png</file>
+        <file>assets/icons/Flags/Mexico.png</file>
+        <file>assets/icons/Flags/Micronesia.png</file>
+        <file>assets/icons/Flags/Mongolia.png</file>
+        <file>assets/icons/Flags/Morocco.png</file>
+        <file>assets/icons/Flags/Mozambique.png</file>
+        <file>assets/icons/Flags/Myanmar.png</file>
+        <file>assets/icons/Flags/Namibia.png</file>
+        <file>assets/icons/Flags/Nauru.png</file>
+        <file>assets/icons/Flags/Nepal.png.png</file>
+        <file>assets/icons/Flags/New Zealand.png</file>
+        <file>assets/icons/Flags/Niger.png</file>
+        <file>assets/icons/Flags/Nigeria.png</file>
+        <file>assets/icons/Flags/Oman.png</file>
+        <file>assets/icons/Flags/Pakistan.png</file>
+        <file>assets/icons/Flags/Palau.png</file>
+        <file>assets/icons/Flags/Papua New Guinea.png</file>
+        <file>assets/icons/Flags/Paraguay.png</file>
+        <file>assets/icons/Flags/Peru.png</file>
+        <file>assets/icons/Flags/Philippines.png</file>
+        <file>assets/icons/Flags/Qatar.png</file>
+        <file>assets/icons/Flags/Rwanda.png</file>
+        <file>assets/icons/Flags/Saint Kitts and Nevis.png</file>
+        <file>assets/icons/Flags/Saint Vincent and the Grenadines.png</file>
+        <file>assets/icons/Flags/Samoa.png</file>
+        <file>assets/icons/Flags/Sao Tome and Principe.png</file>
+        <file>assets/icons/Flags/Saudi Arabia.png</file>
+        <file>assets/icons/Flags/Seychelles.png</file>
+        <file>assets/icons/Flags/Sierra Leone.png</file>
+        <file>assets/icons/Flags/Singapore.png</file>
+        <file>assets/icons/Flags/Solomon Islands.png</file>
+        <file>assets/icons/Flags/Somalia.png</file>
+        <file>assets/icons/Flags/South Africa.png</file>
+        <file>assets/icons/Flags/South Sudan.png</file>
+        <file>assets/icons/Flags/Sudan.png</file>
+        <file>assets/icons/Flags/Suriname.png</file>
+        <file>assets/icons/Flags/Syria.png</file>
+        <file>assets/icons/Flags/Tajikistan.png</file>
+        <file>assets/icons/Flags/Tanzania.png</file>
+        <file>assets/icons/Flags/Thailand.png</file>
+        <file>assets/icons/Flags/Togo.png</file>
+        <file>assets/icons/Flags/Tonga.png</file>
+        <file>assets/icons/Flags/Tunisia.png</file>
+        <file>assets/icons/Flags/Turkmenistan.png</file>
+        <file>assets/icons/Flags/Tuvalu.png</file>
+        <file>assets/icons/Flags/Uganda.png</file>
+        <file>assets/icons/Flags/United Arab Emirates.png</file>
+        <file>assets/icons/Flags/United States of America.png</file>
+        <file>assets/icons/Flags/Uzbekistan.png</file>
+        <file>assets/icons/Flags/Vietnam.png</file>
+        <file>assets/icons/Flags/Yemen.png</file>
+        <file>assets/icons/Flags/Zambia.png</file>
+        <file>assets/icons/Flags/Zimbabwe.png</file>
+        <file>assets/icons/Flags/Afghanistan.png</file>
+        <file>assets/icons/Flags/Senegal.png</file>
     </qresource>
     <qresource prefix="/"/>
     <qresource prefix="/db">
