moving from tripDayPage to gallery feature was added,   GalleryPage was changed but need to be fixed

--- a/assets.qrc
+++ b/assets.qrc
@@ -228,5 +228,6 @@
     <qresource prefix="/"/>
     <qresource prefix="/db">
         <file>assets/UsersData.json</file>
+        <file>assets/CountryInformation.json</file>
     </qresource>
 </RCC>
