CheckListPage was simplified with 1 c++ QSortFilterProxyModel

--- a/assets.qrc
+++ b/assets.qrc
@@ -234,5 +234,6 @@
         <file>assets/CountryInformation.json</file>
         <file>assets/TravelAgentsDB.json</file>
         <file>assets/CountriesCitiesDB</file>
+        <file>assets/CheckListModel.json</file>
     </qresource>
 </RCC>
